k8s/app-server.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blog3
  labels:
    app: blog3-app-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: blog3-app-server
  template:
    metadata:
      labels:                 # Labels that will be applied to each Pod in this deployment
        app: blog3-app-server
    spec:
      containers:
      - name: blog3-app-server
        image: ghcr.io/tokuhirom/blog3:latest
        imagePullPolicy: Always
        ports:
          - name: http
            containerPort: 8080 # spring boot
          - name: http-web
            containerPort: 8180 # ktor(web)
          - name: http-admin
            containerPort: 8280 # kweb(admin)
        resources:
          limits:
            cpu: 0.2
            memory: "700Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: blog3-app-server
  labels:
    app: blog3-app-server
spec:
  type: NodePort
  selector:
    app: blog3-app-server
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  - name: http-web
    port: 8180
    targetPort: 8180
  - name: http-admin
    port: 8280
    targetPort: 8280
